objects/CMPL123__Intelligent_Forms_Config_Item__mdt.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox responsible for (de)activating the config item. Default value: true.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Config_JSON__c</fullName>
        <description>The field will contain JSON string with section states (see below)</description>
        <label>Config JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Config_Type__c</fullName>
        <description>Possible values: New, WFRule. Null for F2</description>
        <label>Config Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Layout_Id__c</fullName>
        <label>Layout Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Layout_Name__c</fullName>
        <label>Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Layout_Namespace_Prefix__c</fullName>
        <label>Layout Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Object_API_Name__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__WF_Rule_Id__c</fullName>
        <label>WF_Rule_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__WF_Rule_Key_Value__c</fullName>
        <label>WF_Rule_Key_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__WF_Rule_Name__c</fullName>
        <description>Null for 'New' config type and for F2 Migration note: working only WF rule names not change between orgs.</description>
        <label>WF Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Intelligent Forms Config Item</label>
    <pluralLabel>Intelligent Forms Config Items</pluralLabel>
</CustomObject>